--- a/codelabs/deleting-data-room-database/index.html
+++ b/codelabs/deleting-data-room-database/index.html
@@ -21,7 +21,7 @@
 </head>
 <body>
   <google-codelab-analytics gaid="UA-3295395-7" ga4id="G-E0H6JSF2N3"></google-codelab-analytics>
-  <google-codelab codelab-gaid=""
+  <google-codelab codelab-gaid="UA-3295395-7"
                   codelab-ga4id="G-E0H6JSF2N3"
                   id="deleting-data-room-database"
                   title="TP 04.2B: Suppression de données d&#39;une base de données Room"
