--- a/codelabs/menus-et-pickers/index.html
+++ b/codelabs/menus-et-pickers/index.html
@@ -153,7 +153,7 @@
 </table>
 <ol type="1" start="3">
 <li>Extrayez la chaîne <code>"Contact"</code> codée en dur dans la ressource chaîne <code>action_contact</code>.</li>
-<li>Ajoutez un nouvel élément de menu à l&#39;aide de la balise <code><item></code> dans le bloc <code><menu></code> et attribuez-lui les attributs suivants:</li>
+<li>Ajoutez un nouvel élément de menu à l&#39;aide de la balise <code>item</code> dans le bloc <code>menu</code> et attribuez-lui les attributs suivants:</li>
 </ol>
 <table>
 <tr><td colspan="1" rowspan="1"><p><strong>Attribut</strong></p>
