--- a/codelabs/room-livedata-viewmodel/index.html
+++ b/codelabs/room-livedata-viewmodel/index.html
@@ -21,7 +21,7 @@
 </head>
 <body>
   <google-codelab-analytics gaid="UA-3295395-7" ga4id="G-E0H6JSF2N3"></google-codelab-analytics>
-  <google-codelab codelab-gaid=""
+  <google-codelab codelab-gaid="UA-3295395-7"
                   codelab-ga4id="G-E0H6JSF2N3"
                   id="room-livedata-viewmodel"
                   title="TP 04.2A: Room, LiveData et ViewModel"
